--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "notetaking",
-  "version": "1.0.0",
-  "description": "Yet another note taking application",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "2.1.1"
+  },
   "scripts": {
-    "test": "test"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/binaryjohn/notetaking.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "keywords": [
-    "WalmartLabs",
-    "demo",
-    "audition"
-  ],
-  "author": "Wm. Weatherspoon",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/binaryjohn/notetaking/issues"
-  },
-  "homepage": "https://github.com/binaryjohn/notetaking#readme"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
